
Directory etc
 asim.pack                 Locally Modified            6 

Directory .
 configure                 Locally Modified            7 
 configure.in              Locally Modified            7 


Change name to asimcore.

Joel

----------
jsemer      Date: Wed Nov  8 11:03:34 EST 2006  CSN: CSN-asimcore-9
                  Wed Nov  8 16:03:34 UTC 2006


Directory etc
 asim.pack                 Locally Modified            8 


Changed asimcore repository location from .../svn/asim to .../asim/asimcore

Joel

----------
emer        Date: Wed Nov  8 17:15:19 EST 2006  CSN: CSN-asimcore-11
                  Wed Nov  8 22:15:19 UTC 2006


Directory libperl/Asim/lib/Asim/Workspace
 Template.pm               Locally Modified           10 

Fixed up template creation for new workspaces.

Joel

----------
emer        Date: Wed Nov  8 18:00:26 EST 2006  CSN: CSN-asimcore-12
                  Wed Nov  8 23:00:26 UTC 2006


Directory etc
 awb.config.template.in    Locally Modified           11 

Fixed awb.config template to match new package name.

Joel

----------
pellauer    Date: Wed Dec 20 11:10:17 EST 2006  CSN: CSN-asimcore-13
                  Wed Dec 20 16:10:17 UTC 2006


Directory .
 configure                 Locally Modified           12 
 configure.in              Locally Modified           12 

Directory lib/libasim/include/asim
 trace.h                   Locally Modified           12 


Added better checking for QT, also added assert.h so that it builds on Debian.

Michael

----------
spartha1    Date: Tue Mar 13 16:12:45 EDT 2007  CSN: CSN-asimcore-14
                  Tue Mar 13 20:12:45 UTC 2007


Directory libperl/AsimShell/lib/AsimShell
 Commands.pm               Locally Modified           13 

Updating with simcore changes (rev. 2229)

- Changed a number of package commands to take multiple packages
as arguments: delete, show, update, commit, configure, build, and
make commands can all take one or more package arguments now.